# mbc-unicode-input

./: README.md  pyproject.toml
mbc_unicode_input/: main.py
